# difusion

./: .gitignore  CMakeLists.txt  README.md
app/: README.md
configs/: README.md
difusion/: CMakeLists.txt  dtype.h  pcl_types.h
difusion/measurements/: gnss_measurement.h  imu_measurement.h  measurement.h  pcd_measurement.h
difusion/modules/: context.h  module.h
difusion/modules/estimator/: estimator.h
difusion/modules/fuser/: fuser.cpp  fuser.h
difusion/modules/localmap/: localmap.h
difusion/modules/preprocess/: preprocessor.h
difusion/modules/preprocess/components/: component.h  imu_pre_integrator.h  pcd_feat_extractor.h  pcd_motion_compensator.h  pcd_registration.h
difusion/modules/state_interp/: state_interp.h
difusion/optimization/: README.md
difusion/optimization/ceres/: camera_project_cost.h  imu_integration_cost.h  se3_autodiff_manifold.h  se3_dummy_parameterization.h  so3_dummy_parameterization.h
difusion/rigid/: README.md
difusion/states/: state.h
test/: README.md
tools/: README.md
